kubernetes/apps/apprise/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apprise
  namespace: apprise
  labels:
    app: apprise
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: apprise
  template:
    metadata:
      labels:
        app: apprise
    spec:
      containers:
        - name: apprise
          image: caronc/apprise:latest
          ports:
            - containerPort: 8000
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
