kubernetes/apps/apprise/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apprise
  namespace: apprise
spec:
  selector:
    app: apprise
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  type: ClusterIP
