kubernetes/apps/apprise/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apprise
  namespace: apprise
  annotations:
    external-dns.alpha.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`apprise.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: apprise
          port: 8000
  tls: {}
